--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,19 @@
   <meta charset="utf-8">
   <title>Algebra3DCalculator</title>
   <base href="/">
+  <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css"/>
+  <link rel="stylesheet" href="assets/vendors/aos/dist/aos.css/aos.css"/>
+
 </head>
 <body>
-  <app-root></app-root>
+
+<app-root></app-root>
+
+<script src="assets/vendors/js/vendor.bundle.base.js"></script>
+<script src="assets/vendors/aos/dist/aos.js/aos.js"></script>
+<script src="assets/js/animation.js"></script>
+<script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 </body>
 </html>
