added gerade form added styling buttons fixed responsive to be

--- a/src/assets/math-templates/intersection-of-two-planes/intersection-line-two-planes.html
+++ b/src/assets/math-templates/intersection-of-two-planes/intersection-line-two-planes.html
@@ -1,9 +1,7 @@
 <div>
   <math class="math">
-    <msub>
-      <mo>E</mo>
-      <mn>1</mn>
-    </msub>
+    <mo>G</mo>
+
     <mfenced open="{" close="}">
       <mtable>
         <mrow class="MJX-TeXAtom-ORD">
@@ -19,15 +17,7 @@
           <mo>&#x2223;</mo>
           <mo>&#8707;</mo>
           <mo>&nbsp;</mo>
-          <msub>
-            <mi>k</mi>
-            <mn>1</mn>
-          </msub>
-          <mo>,</mo>
-          <msub>
-            <mi>k</mi>
-            <mn>2</mn>
-          </msub>
+          <mi>k</mi>
           <mo>&isin;</mo>
           <mi mathvariant="double-struck">R</mi>
           <mo>:</mo>
@@ -42,7 +32,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input autocomplete="off" type="number" ID="E1-base-vector-01" xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="G-base-vector-01" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -52,7 +42,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input autocomplete="off" type="number" ID="E1-base-vector-02" xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="G-base-vector-02" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -62,49 +52,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input autocomplete="off" type="number" ID="E1-base-vector-03" xmlns="http://www.w3.org/1999/xhtml"
-                           class="vector-input">
-                  </annotation-xml>
-                </semantics>
-              </mtd>
-            </mtr>
-          </mtable>
-          <mo>)</mo>
-          <mo>+</mo>
-          <msub>
-            <mi>k</mi>
-            <mn>1</mn>
-          </msub>
-          <mo>(</mo>
-          <mtable rowspacing="4pt" columnspacing="1em">
-            <mtr>
-              <mtd>
-                <semantics>
-                  <annotation-xml encoding="application/xhtml+xml">
-                    <input autocomplete="off" type="number" ID="E1-direction-vector-01-a"
-                           xmlns="http://www.w3.org/1999/xhtml"
-                           class="vector-input">
-                  </annotation-xml>
-                </semantics>
-              </mtd>
-            </mtr>
-            <mtr>
-              <mtd>
-                <semantics>
-                  <annotation-xml encoding="application/xhtml+xml">
-                    <input autocomplete="off" type="number" ID="E1-direction-vector-01-b"
-                           xmlns="http://www.w3.org/1999/xhtml"
-                           class="vector-input">
-                  </annotation-xml>
-                </semantics>
-              </mtd>
-            </mtr>
-            <mtr>
-              <mtd>
-                <semantics>
-                  <annotation-xml encoding="application/xhtml+xml">
-                    <input autocomplete="off" type="number" ID="E1-direction-vector-01-c"
-                           xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="G-base-vector-03" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -113,17 +61,25 @@
           </mtable>
           <mo>)</mo>
           <mo>+</mo>
-          <msub>
-            <mi>k</mi>
-            <mn>2</mn>
-          </msub>
+          <mi>k</mi>
+          <mn>1</mn>
           <mo>(</mo>
           <mtable rowspacing="4pt" columnspacing="1em">
             <mtr>
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input autocomplete="off" type="number" ID="E1-direction-vector-02-a"
+                    <input disabled ID="G-direction-vector-01" xmlns="http://www.w3.org/1999/xhtml"
+                           class="vector-input">
+                  </annotation-xml>
+                </semantics>
+              </mtd>
+            </mtr>
+            <mtr>
+              <mtd>
+                <semantics>
+                  <annotation-xml encoding="application/xhtml+xml">
+                    <input disabled ID="G-direction-vector-02"
                            xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
@@ -134,19 +90,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input autocomplete="off" type="number" ID="E1-direction-vector-02-b"
-                           xmlns="http://www.w3.org/1999/xhtml"
-                           class="vector-input">
-                  </annotation-xml>
-                </semantics>
-              </mtd>
-            </mtr>
-            <mtr>
-              <mtd>
-                <semantics>
-                  <annotation-xml encoding="application/xhtml+xml">
-                    <input autocomplete="off" type="number" ID="E1-direction-vector-02-c"
-                           xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="G-direction-vector-03" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
