--- a/src/assets/math-templates/intersection-of-two-planes/plane2-input-form.html
+++ b/src/assets/math-templates/intersection-of-two-planes/plane2-input-form.html
@@ -42,7 +42,8 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input ID="E2-base-vector-01" xmlns="http://www.w3.org/1999/xhtml" class="vector-input">
+                    <input autocomplete="off" type="number" ID="E2-base-vector-01" xmlns="http://www.w3.org/1999/xhtml"
+                           class="vector-input">
                   </annotation-xml>
                 </semantics>
               </mtd>
@@ -51,7 +52,8 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input ID="E2-base-vector-02" xmlns="http://www.w3.org/1999/xhtml" class="vector-input">
+                    <input autocomplete="off" type="number" ID="E2-base-vector-02" xmlns="http://www.w3.org/1999/xhtml"
+                           class="vector-input">
                   </annotation-xml>
                 </semantics>
               </mtd>
@@ -60,7 +62,8 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input ID="E2-base-vector-03" xmlns="http://www.w3.org/1999/xhtml" class="vector-input">
+                    <input autocomplete="off" type="number" ID="E2-base-vector-03" xmlns="http://www.w3.org/1999/xhtml"
+                           class="vector-input">
                   </annotation-xml>
                 </semantics>
               </mtd>
@@ -78,7 +81,8 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input ID="E2-direction-vector-01-a" xmlns="http://www.w3.org/1999/xhtml" class="vector-input">
+                    <input autocomplete="off" type="number" ID="E2-direction-vector-01-a"
+                           xmlns="http://www.w3.org/1999/xhtml" class="vector-input">
                   </annotation-xml>
                 </semantics>
               </mtd>
@@ -87,7 +91,8 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input ID="E2-direction-vector-01-b" xmlns="http://www.w3.org/1999/xhtml" class="vector-input">
+                    <input autocomplete="off" type="number" ID="E2-direction-vector-01-b"
+                           xmlns="http://www.w3.org/1999/xhtml" class="vector-input">
                   </annotation-xml>
                 </semantics>
               </mtd>
@@ -96,7 +101,8 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input ID="E2-direction-vector-01-c" xmlns="http://www.w3.org/1999/xhtml" class="vector-input">
+                    <input autocomplete="off" type="number" ID="E2-direction-vector-01-c"
+                           xmlns="http://www.w3.org/1999/xhtml" class="vector-input">
                   </annotation-xml>
                 </semantics>
               </mtd>
@@ -114,7 +120,8 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input ID="E2-direction-vector-02-a" xmlns="http://www.w3.org/1999/xhtml" class="vector-input">
+                    <input autocomplete="off" type="number" ID="E2-direction-vector-02-a"
+                           xmlns="http://www.w3.org/1999/xhtml" class="vector-input">
                   </annotation-xml>
                 </semantics>
               </mtd>
@@ -123,7 +130,8 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input ID="E2-direction-vector-02-b" xmlns="http://www.w3.org/1999/xhtml" class="vector-input">
+                    <input autocomplete="off" type="number" ID="E2-direction-vector-02-b"
+                           xmlns="http://www.w3.org/1999/xhtml" class="vector-input">
                   </annotation-xml>
                 </semantics>
               </mtd>
@@ -132,7 +140,8 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input ID="E2-direction-vector-02-c" xmlns="http://www.w3.org/1999/xhtml" class="vector-input">
+                    <input autocomplete="off" type="number" ID="E2-direction-vector-02-c"
+                           xmlns="http://www.w3.org/1999/xhtml" class="vector-input">
                   </annotation-xml>
                 </semantics>
               </mtd>
