--- a/src/assets/math-templates/intersection-plane-and-line/plane-input-form.html
+++ b/src/assets/math-templates/intersection-plane-and-line/plane-input-form.html
@@ -1,7 +1,6 @@
 <div>
   <math class="math">
-    <mo>G</mo>
-
+    <mo>E</mo>
     <mfenced open="{" close="}">
       <mtable>
         <mrow class="MJX-TeXAtom-ORD">
@@ -17,7 +16,15 @@
           <mo>&#x2223;</mo>
           <mo>&#8707;</mo>
           <mo>&nbsp;</mo>
-          <mi>k</mi>
+          <msub>
+            <mi>k</mi>
+            <mn>1</mn>
+          </msub>
+          <mo>,</mo>
+          <msub>
+            <mi>k</mi>
+            <mn>2</mn>
+          </msub>
           <mo>&isin;</mo>
           <mi mathvariant="double-struck">R</mi>
           <mo>:</mo>
@@ -32,7 +39,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="G-base-vector-01" xmlns="http://www.w3.org/1999/xhtml"
+                    <input autocomplete="off" type="number" ID="E-base-vector-01" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -42,7 +49,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="G-base-vector-02" xmlns="http://www.w3.org/1999/xhtml"
+                    <input autocomplete="off" type="number" ID="E-base-vector-02" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -52,7 +59,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="G-base-vector-03" xmlns="http://www.w3.org/1999/xhtml"
+                    <input autocomplete="off" type="number" ID="E-base-vector-03" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -61,25 +68,17 @@
           </mtable>
           <mo>)</mo>
           <mo>+</mo>
-          <mi>k</mi>
-          <mn>1</mn>
+          <msub>
+            <mi>k</mi>
+            <mn>1</mn>
+          </msub>
           <mo>(</mo>
           <mtable rowspacing="4pt" columnspacing="1em">
             <mtr>
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="G-direction-vector-01" xmlns="http://www.w3.org/1999/xhtml"
-                           class="vector-input">
-                  </annotation-xml>
-                </semantics>
-              </mtd>
-            </mtr>
-            <mtr>
-              <mtd>
-                <semantics>
-                  <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="G-direction-vector-02"
+                    <input autocomplete="off" type="number" ID="E-direction-vector-01-a"
                            xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
@@ -90,7 +89,61 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="G-direction-vector-03" xmlns="http://www.w3.org/1999/xhtml"
+                    <input autocomplete="off" type="number" ID="E-direction-vector-01-b"
+                           xmlns="http://www.w3.org/1999/xhtml"
+                           class="vector-input">
+                  </annotation-xml>
+                </semantics>
+              </mtd>
+            </mtr>
+            <mtr>
+              <mtd>
+                <semantics>
+                  <annotation-xml encoding="application/xhtml+xml">
+                    <input autocomplete="off" type="number" ID="E-direction-vector-01-c"
+                           xmlns="http://www.w3.org/1999/xhtml"
+                           class="vector-input">
+                  </annotation-xml>
+                </semantics>
+              </mtd>
+            </mtr>
+          </mtable>
+          <mo>)</mo>
+          <mo>+</mo>
+          <msub>
+            <mi>k</mi>
+            <mn>2</mn>
+          </msub>
+          <mo>(</mo>
+          <mtable rowspacing="4pt" columnspacing="1em">
+            <mtr>
+              <mtd>
+                <semantics>
+                  <annotation-xml encoding="application/xhtml+xml">
+                    <input autocomplete="off" type="number" ID="E-direction-vector-02-a"
+                           xmlns="http://www.w3.org/1999/xhtml"
+                           class="vector-input">
+                  </annotation-xml>
+                </semantics>
+              </mtd>
+            </mtr>
+            <mtr>
+              <mtd>
+                <semantics>
+                  <annotation-xml encoding="application/xhtml+xml">
+                    <input autocomplete="off" type="number" ID="E-direction-vector-02-b"
+                           xmlns="http://www.w3.org/1999/xhtml"
+                           class="vector-input">
+                  </annotation-xml>
+                </semantics>
+              </mtd>
+            </mtr>
+            <mtr>
+              <mtd>
+                <semantics>
+                  <annotation-xml encoding="application/xhtml+xml">
+                    <input autocomplete="off" type="number" ID="E-direction-vector-02-c"
+                           xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
