added some functionality to line between two points

--- a/src/assets/math-templates/line-between-two-points/line-output-form.html
+++ b/src/assets/math-templates/line-between-two-points/line-output-form.html
@@ -31,7 +31,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="G-base-vector-01" xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="G-base-vector-x" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -41,7 +41,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="G-base-vector-02" xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="G-base-vector-y" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -51,7 +51,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="G-base-vector-03" xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="G-base-vector-z" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -68,7 +68,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="G-direction-vector-01" xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="G-direction-vector-x" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -78,8 +78,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="G-direction-vector-02"
-                           xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="G-direction-vector-y" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -89,7 +88,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="G-direction-vector-03" xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="G-direction-vector-z" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
