--- a/src/assets/math-templates/line-between-two-points/point2-input-form.html
+++ b/src/assets/math-templates/line-between-two-points/point2-input-form.html
@@ -13,19 +13,19 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input autocomplete="off" type="number" ID="P2-01" xmlns="http://www.w3.org/1999/xhtml"
+                    <input autocomplete="off" type="number" ID="P2-x" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input autocomplete="off" type="number" ID="P2-02" xmlns="http://www.w3.org/1999/xhtml"
+                    <input autocomplete="off" type="number" ID="P2-y" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input autocomplete="off" type="number" ID="P2-03" xmlns="http://www.w3.org/1999/xhtml"
+                    <input autocomplete="off" type="number" ID="P2-z" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
