--- a/src/assets/math-templates/length-between-two-points/point1-input-form.html
+++ b/src/assets/math-templates/length-between-two-points/point1-input-form.html
@@ -13,19 +13,19 @@
             <mtd>
               <semantics>
                 <annotation-xml encoding="application/xhtml+xml">
-                  <input autocomplete="off" type="number" ID="P1-01" xmlns="http://www.w3.org/1999/xhtml"
+                  <input autocomplete="off" type="number" ID="P1-x" xmlns="http://www.w3.org/1999/xhtml"
                          class="vector-input">
                 </annotation-xml>
               </semantics>
               <semantics>
                 <annotation-xml encoding="application/xhtml+xml">
-                  <input autocomplete="off" type="number" ID="P1-02" xmlns="http://www.w3.org/1999/xhtml"
+                  <input autocomplete="off" type="number" ID="P1-y" xmlns="http://www.w3.org/1999/xhtml"
                          class="vector-input">
                 </annotation-xml>
               </semantics>
               <semantics>
                 <annotation-xml encoding="application/xhtml+xml">
-                  <input autocomplete="off" type="number" ID="P1-03" xmlns="http://www.w3.org/1999/xhtml"
+                  <input autocomplete="off" type="number" ID="P1-z" xmlns="http://www.w3.org/1999/xhtml"
                          class="vector-input">
                 </annotation-xml>
               </semantics>
