added lines are finished

--- a/src/assets/math-templates/intersection-of-two-lines/point-output-form.html
+++ b/src/assets/math-templates/intersection-of-two-lines/point-output-form.html
@@ -13,19 +13,19 @@
             <mtd>
               <semantics>
                 <annotation-xml encoding="application/xhtml+xml">
-                  <input autocomplete="off" type="number" ID="P1-x" xmlns="http://www.w3.org/1999/xhtml"
+                  <input disabled ID="P1-x" xmlns="http://www.w3.org/1999/xhtml"
                          class="vector-input">
                 </annotation-xml>
               </semantics>
               <semantics>
                 <annotation-xml encoding="application/xhtml+xml">
-                  <input autocomplete="off" type="number" ID="P1-y" xmlns="http://www.w3.org/1999/xhtml"
+                  <input disabled ID="P1-y" xmlns="http://www.w3.org/1999/xhtml"
                          class="vector-input">
                 </annotation-xml>
               </semantics>
               <semantics>
                 <annotation-xml encoding="application/xhtml+xml">
-                  <input autocomplete="off" type="number" ID="P1-z" xmlns="http://www.w3.org/1999/xhtml"
+                  <input disabled ID="P1-z" xmlns="http://www.w3.org/1999/xhtml"
                          class="vector-input">
                 </annotation-xml>
               </semantics>
