--- a/src/assets/math-templates/parallel-line/line2-output-form.html
+++ b/src/assets/math-templates/parallel-line/line2-output-form.html
@@ -1,6 +1,9 @@
 <div>
   <math class="math">
-    <mo>G</mo>
+    <msub>
+      <mo>G</mo>
+      <mn>4</mn>
+    </msub>
     <mfenced open="{" close="}">
       <mtable>
         <mrow class="MJX-TeXAtom-ORD">
@@ -16,7 +19,10 @@
           <mo>&#x2223;</mo>
           <mo>&#8707;</mo>
           <mo>&nbsp;</mo>
-          <mi>k</mi>
+          <msub>
+            <mi>k</mi>
+            <mn>4</mn>
+          </msub>
           <mo>&isin;</mo>
           <mi mathvariant="double-struck">R</mi>
           <mo>:</mo>
@@ -31,7 +37,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input type="number" autocomplete="off" ID="G-base-vector-01" xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="G2-OUT-base-vector-x" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -41,7 +47,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input type="number" autocomplete="off" ID="G-base-vector-02" xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="G2-OUT-base-vector-y" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -51,7 +57,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input type="number" autocomplete="off" ID="G-base-vector-03" xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="G2-OUT-base-vector-z" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -61,13 +67,24 @@
           <mo>)</mo>
           <mo>+</mo>
           <mi>k</mi>
+          <mn>4</mn>
           <mo>(</mo>
           <mtable rowspacing="4pt" columnspacing="1em">
             <mtr>
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input type="number" autocomplete="off" ID="G-direction-vector-01"
+                    <input disabled ID="G2-OUT-direction-vector-x" xmlns="http://www.w3.org/1999/xhtml"
+                           class="vector-input">
+                  </annotation-xml>
+                </semantics>
+              </mtd>
+            </mtr>
+            <mtr>
+              <mtd>
+                <semantics>
+                  <annotation-xml encoding="application/xhtml+xml">
+                    <input disabled ID="G2-OUT-direction-vector-y"
                            xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
@@ -78,19 +95,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input type="number" autocomplete="off" ID="G-direction-vector-02"
-                           xmlns="http://www.w3.org/1999/xhtml"
-                           class="vector-input">
-                  </annotation-xml>
-                </semantics>
-              </mtd>
-            </mtr>
-            <mtr>
-              <mtd>
-                <semantics>
-                  <annotation-xml encoding="application/xhtml+xml">
-                    <input type="number" autocomplete="off" ID="G-direction-vector-03"
-                           xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="G2-OUT-direction-vector-z" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
