--- a/src/assets/math-templates/intersection-of-two-lines/line1-input-form.html
+++ b/src/assets/math-templates/intersection-of-two-lines/line1-input-form.html
@@ -1,6 +1,9 @@
 <div>
   <math class="math">
-    <mo>G</mo>
+    <msub>
+      <mo>G</mo>
+      <mn>1</mn>
+    </msub>
     <mfenced open="{" close="}">
       <mtable>
         <mrow class="MJX-TeXAtom-ORD">
@@ -16,7 +19,10 @@
           <mo>&#x2223;</mo>
           <mo>&#8707;</mo>
           <mo>&nbsp;</mo>
-          <mi>k</mi>
+          <msub>
+            <mi>k</mi>
+            <mn>1</mn>
+          </msub>
           <mo>&isin;</mo>
           <mi mathvariant="double-struck">R</mi>
           <mo>:</mo>
@@ -31,7 +37,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input type="number" autocomplete="off" ID="G-base-vector-01" xmlns="http://www.w3.org/1999/xhtml"
+                    <input type="number" autocomplete="off" ID="G1-base-vector-x" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -41,7 +47,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input type="number" autocomplete="off" ID="G-base-vector-02" xmlns="http://www.w3.org/1999/xhtml"
+                    <input type="number" autocomplete="off" ID="G1-base-vector-y" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -51,7 +57,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input type="number" autocomplete="off" ID="G-base-vector-03" xmlns="http://www.w3.org/1999/xhtml"
+                    <input type="number" autocomplete="off" ID="G1-base-vector-z" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -68,7 +74,17 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input type="number" autocomplete="off" ID="G-direction-vector-01"
+                    <input type="number" autocomplete="off" ID="G1-direction-vector-x" xmlns="http://www.w3.org/1999/xhtml"
+                           class="vector-input">
+                  </annotation-xml>
+                </semantics>
+              </mtd>
+            </mtr>
+            <mtr>
+              <mtd>
+                <semantics>
+                  <annotation-xml encoding="application/xhtml+xml">
+                    <input type="number" autocomplete="off" ID="G1-direction-vector-y"
                            xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
@@ -79,19 +95,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input type="number" autocomplete="off" ID="G-direction-vector-02"
-                           xmlns="http://www.w3.org/1999/xhtml"
-                           class="vector-input">
-                  </annotation-xml>
-                </semantics>
-              </mtd>
-            </mtr>
-            <mtr>
-              <mtd>
-                <semantics>
-                  <annotation-xml encoding="application/xhtml+xml">
-                    <input type="number" autocomplete="off" ID="G-direction-vector-03"
-                           xmlns="http://www.w3.org/1999/xhtml"
+                    <input type="number" autocomplete="off" ID="G1-direction-vector-z" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
