added functionality of arithmetic operations of vectors srsr & adon

--- a/src/assets/math-templates/arithmatic-operations-vectors/vector-output-form.html
+++ b/src/assets/math-templates/arithmatic-operations-vectors/vector-output-form.html
@@ -37,7 +37,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="V-base-vector-x" xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="V-out-base-vector-x" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -47,7 +47,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="V-base-vector-y" xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="V-out-base-vector-y" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -57,7 +57,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="V-base-vector-z" xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="V-out-base-vector-z" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -76,7 +76,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="V-direction-vector-x" xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="V-out-direction-vector-x" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -86,7 +86,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="V-direction-vector-y" xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="V-out-direction-vector-y" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
@@ -96,7 +96,7 @@
               <mtd>
                 <semantics>
                   <annotation-xml encoding="application/xhtml+xml">
-                    <input disabled ID="V-direction-vector-z" xmlns="http://www.w3.org/1999/xhtml"
+                    <input disabled ID="V-out-direction-vector-z" xmlns="http://www.w3.org/1999/xhtml"
                            class="vector-input">
                   </annotation-xml>
                 </semantics>
