added functionality length of vector

--- a/src/assets/math-templates/length-of-vector/vector-input-form.html
+++ b/src/assets/math-templates/length-of-vector/vector-input-form.html
@@ -1,11 +1,11 @@
 <div>
   <math class="math">
-    <msub>
-      <mo>P</mo>
-      <mn>1</mn>
-    </msub>
     <mtable>
       <mrow class="MJX-TeXAtom-ORD">
+        <mover>
+          <mi>v</mi>
+          <mo stretchy="false">&#x2192;</mo>
+        </mover>
         <mo>=</mo>
         <mo>(</mo>
         <mtable rowspacing="4pt" columnspacing="1em">
@@ -13,19 +13,27 @@
             <mtd>
               <semantics>
                 <annotation-xml encoding="application/xhtml+xml">
-                  <input autocomplete="off" type="number" ID="P1-x" xmlns="http://www.w3.org/1999/xhtml"
+                  <input type="number" autocomplete="off" ID="V-x" xmlns="http://www.w3.org/1999/xhtml"
                          class="vector-input">
                 </annotation-xml>
               </semantics>
+            </mtd>
+          </mtr>
+          <mtr>
+            <mtd>
               <semantics>
                 <annotation-xml encoding="application/xhtml+xml">
-                  <input autocomplete="off" type="number" ID="P1-y" xmlns="http://www.w3.org/1999/xhtml"
+                  <input type="number" autocomplete="off" ID="V-y" xmlns="http://www.w3.org/1999/xhtml"
                          class="vector-input">
                 </annotation-xml>
               </semantics>
+            </mtd>
+          </mtr>
+          <mtr>
+            <mtd>
               <semantics>
                 <annotation-xml encoding="application/xhtml+xml">
-                  <input autocomplete="off" type="number" ID="P1-z" xmlns="http://www.w3.org/1999/xhtml"
+                  <input type="number" autocomplete="off" ID="V-z" xmlns="http://www.w3.org/1999/xhtml"
                          class="vector-input">
                 </annotation-xml>
               </semantics>
@@ -37,3 +45,4 @@
     </mtable>
   </math>
 </div>
+
